# test

./: CMakeLists.txt  Game.ini  Makefile  README  StandardShading.fragmentshader  StandardShading.vertexshader  TextVertexShader.fragmentshader  TextVertexShader.vertexshader  build.bat  commands.cpp  commands.hpp  install.bat  main.cpp  uninstall.bat
common/: controls - Copy.hpp  controls.hpp  obj.hpp  objloader.hpp  openFile.hpp  shader.hpp  tangentspace.hpp  text2D.hpp  texture.hpp  vboindexer.hpp
iniparser/: iniparser.7z  libiniparser.so.0
iniparser/src/: CMakeLists.txt
